# NexusFlow

./: .gitignore  AGENTS.md  DESIGN.md  Makefile  nexusflow.pen
backend/: .env.example  Cargo.toml
backend/migrations/: 202606170001_initial.sql
backend/src/: main.rs
backend/src/app/: core.rs  routes.rs
backend/src/domains/: access_helpers.rs  auth.rs  dashboard_config.rs  data_scope.rs  delete_lifecycle.rs  detail_workbench.rs  dispatch_approval.rs  gantt_search.rs  invitation_admin.rs  notification_report_tool.rs  organization_moves.rs  organization_personnel.rs  permission.rs  person_memberships.rs  person_skills.rs  project.rs  report_scope.rs  resource.rs  resource_requirement.rs  task_assignment_review.rs  task_core.rs  task_flow.rs  task_workbench.rs  workload_conflict.rs
backend/src/shared/: generic_read.rs  runtime.rs
docs/: README.md  implementation-gap-matrix.md  interaction-backend-gap-audit.md  origin-prd.md  prd.md
docs/00-overview/: README.md  architecture.md  domain-model.md  product-scope.md  submodel-implementation.md
docs/01-organization-personnel/: function-design.md  page-design.md  technical-design.md
docs/02-permission/: function-design.md  page-design.md  technical-design.md
e2e/: README.md  api-inventory.md  automation-contract.md  coverage-matrix.md  execution-plan.md  execution-standard.md  result-template.md  roles.md  test-data-plan.md
frontend/: IMPLEMENTATION_GUIDE.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
scripts/: build_release.sh  deploy.sh  provision_server.sh
(+131 files in other folders)
